--- a/templates/contacts/home.html
+++ b/templates/contacts/home.html
@@ -68,7 +68,7 @@
 
     {% for i in list %}
         <h5 style="color:#fff ;">{{ i.name }} ---◘---
-            <a href="{{ i.id }}/" class="btn btn-white btn-outline-white"> Show </a>  
+            <a href="{{ i.get_absolute_url }}" class="btn btn-white btn-outline-white"> Show </a>  
         </h5>
         
         <hr>
