--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 		<br>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
+				<div class="col-md-6 text-center mb-5" style='color:crimson;font-size:20px ;'>
 					{% block main %}{% endblock %}
 				</div>
 			</div>
