--- a/templates/contacts/home.html
+++ b/templates/contacts/home.html
@@ -11,8 +11,8 @@
     <p style="color:crimson; font-size:30px;">{{ form.errors }}</p>
 {% else %}
     
-     <p style="font-size:18px ;">You are logged in as <span style="color:crimson">" {{ user }} "</span>, Do you want to 
-        <a href="/logout/" style="font-weight:bold">Logout !?!</a>
+     <p style="font-size:18px ;">You are logged in as <span style="color:#000">" {{ user }} "</span>, Do you want to 
+        <a href="/logout/" style="font-weight:bold;color:#000">Logout !?!</a>
     </p> 
 
 {% endif %}
